--- a/.github/workflows/anchore-analysis.yml
+++ b/.github/workflows/anchore-analysis.yml
@@ -19,7 +19,7 @@ jobs:
     - name: Pull the Docker image
       run: docker pull docker.io/library/debian:7     
     - name: Run the local Anchore scan action itself with GitHub Advanced Security code scanning integration enabled
-      uses: anchore/scan-action@v2
+      uses: chrisgavin/scan-action@fix-sarif-rule-deduplication
       with:
         image: "docker.io/library/debian:7"
         acs-report-enable: true
