--- a/.github/workflows/anchore-analysis.yml
+++ b/.github/workflows/anchore-analysis.yml
@@ -20,6 +20,7 @@ jobs:
       run: docker pull docker.io/library/debian:7     
     - name: Run the local Anchore scan action itself with GitHub Advanced Security code scanning integration enabled
       uses: anchore/scan-action@v2
+      continue-on-error: true
       with:
         image: "docker.io/library/debian:7"
         acs-report-enable: true
