--- a/.github/workflows/anchore-analysis.yml
+++ b/.github/workflows/anchore-analysis.yml
@@ -19,6 +19,7 @@ jobs:
     - name: Pull the Docker image
       run: docker pull docker.io/library/debian:7     
     - name: Run the local Anchore scan action itself with GitHub Advanced Security code scanning integration enabled
+      id: anchore-scan
       uses: anchore/scan-action@v2
       continue-on-error: true
       with:
@@ -27,13 +28,17 @@ jobs:
         fail-build: true
         severity-cutoff: medium
     - name: grype scan JSON results
+      if: ${{success() || failure()}}
       run: for j in `ls ./anchore-reports/*.json`; do echo "---- ${j} ----"; cat ${j}; echo; done
     - name: upload JSON
+      if: ${{success() || failure()}}
       uses: actions/upload-artifact@v2
       with:
         name: anchore-vulnerabilities
         path: ./anchore-reports/vulnerabilities.json
     - name: Upload Anchore Scan Report
+      if: ${{success() || failure()}}
       uses: github/codeql-action/upload-sarif@v1
       with:
         sarif_file: results.sarif
+
