--- a/.github/workflows/anchore-analysis.yml
+++ b/.github/workflows/anchore-analysis.yml
@@ -16,13 +16,13 @@ jobs:
     steps:
     - name: Checkout the code
       uses: actions/checkout@v2
-    - name: Pull the Docker image
-      run: docker pull docker.io/library/node:10.22.0-jessie     
+    - name: Build the Docker image
+      run: docker build . --file Dockerfile --tag issc29/node-web-app:latest . 
     - name: Run the local Anchore scan action itself with GitHub Advanced Security code scanning integration enabled
       id: anchore-scan
       uses: anchore/scan-action@v2
       with:
-        image: "docker.io/library/node:10.22.0-jessie"
+        image: "issc29/node-web-app:latest"
         
         fail-build: true
         severity-cutoff: medium
