--- a/.github/workflows/anchore-analysis.yml
+++ b/.github/workflows/anchore-analysis.yml
@@ -17,7 +17,7 @@ jobs:
     - name: Checkout the code
       uses: actions/checkout@v2
     - name: Build the Docker image
-      run: docker build . --file Dockerfile --tag issc29/node-web-app:latest . 
+      run: docker build --file Dockerfile --tag issc29/node-web-app:latest . 
     - name: Run the local Anchore scan action itself with GitHub Advanced Security code scanning integration enabled
       id: anchore-scan
       uses: anchore/scan-action@v2
