--- a/.github/workflows/anchore-analysis.yml
+++ b/.github/workflows/anchore-analysis.yml
@@ -23,7 +23,7 @@ jobs:
       uses: anchore/scan-action@v2
       with:
         image: "issc29/node-web-app:latest"
-        
+        acs-report-enable: true
         fail-build: true
         severity-cutoff: medium 
     - name: get output
@@ -31,13 +31,13 @@ jobs:
       run: ls       
     - name: grype scan JSON results
       if: ${{success() || failure()}}
-      run: for j in `ls ./anchore-reports/*.json`; do echo "---- ${j} ----"; cat ${j}; echo; done
+      run: for j in `ls vulnerabilities.json`; do echo "---- ${j} ----"; cat ${j}; echo; done
     - name: upload JSON
       if: ${{success() || failure()}}
       uses: actions/upload-artifact@v2
       with:
         name: anchore-vulnerabilities
-        path: ./anchore-reports/vulnerabilities.json
+        path: vulnerabilities.json
     - name: Upload Anchore Scan Report
       if: ${{success() || failure()}}
       uses: github/codeql-action/upload-sarif@v1
