--- a/.github/workflows/anchore-analysis.yml
+++ b/.github/workflows/anchore-analysis.yml
@@ -24,7 +24,7 @@ jobs:
       with:
         image: "issc29/node-web-app:latest"
         acs-report-enable: true
-        fail-build: true
+        fail-build: false
         severity-cutoff: medium 
     - name: get output
       if: ${{success() || failure()}}
