--- a/.github/workflows/anchore-analysis.yml
+++ b/.github/workflows/anchore-analysis.yml
@@ -23,7 +23,7 @@ jobs:
       uses: anchore/scan-action@v2
       with:
         image: "issc29/node-web-app:latest"
-        fail-build: true
+        fail-build: false
         severity-cutoff: medium 
     - name: grype scan JSON results
       if: ${{success() || failure()}}
