--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,7 +27,8 @@ jobs:
         uses: anchore/scan-action@v2
         with:
           image: "issc29/node-web-app:latest"
-          fail-build:: true
+          fail-build: true
           severity-cutoff: medium
+
 
       
